--- a/action.yml
+++ b/action.yml
@@ -18,4 +18,10 @@ jobs:
     - name: Build docker image
       run: |
         cd dockerfile
-        docker build -t ml:latest .
+        docker build -t ml:latest --target test .
+
+    - name: Run docker container
+      run: docker run -d -p 5000:5000 ml
+
+    - name: Run tests
+      run: pytest
