--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,6 +12,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Intall pip requirements
+      run: pip install -r requirements.txt
+
     - name: Build docker image
       run: |
         cd dockerfile
